--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -102,7 +102,7 @@ insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, contex
 
 insert.Context = insert into dash_context (context_id, context_url, context_title) values (?, ?, ?)
 
-insert.NewsItem = insert into dash_news_item (news_time, title, news_time_label_key, entity_ref, entity_type, subtype, context_id) \
+insert.NewsItem = insert into dash_news_item (news_time, title, news_time_label_key, entity_ref, subtype, entity_type, context_id) \
 values (?, ?, ?, ?, ?, ?, ?)
 
 insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, hidden, sticky) values (?, ?, ?, ?, ?)
