--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -302,7 +302,7 @@ rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_ti
 rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype \
 from dash_calendar_link link join dash_person usr on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
 join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
-where usr.sakai_id=? and link.sticky='1' order by ci.calendar_time asc
+where usr.sakai_id=? and link.sticky=1 order by ci.calendar_time asc
 
 select.starred.CalendarLinks.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
 ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
@@ -315,7 +315,7 @@ rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_ti
 rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype \
 from dash_calendar_link link join dash_person usr on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
 join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
-where usr.sakai_id=? and site.context_id=? and link.sticky='1' order by ci.calendar_time asc
+where usr.sakai_id=? and site.context_id=? and link.sticky=1 order by ci.calendar_time asc
 
 select.Context.by.id = select site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.id=?
@@ -367,6 +367,94 @@ link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
 from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where link.item_id=? and link.person_id=?
+
+select.NewsLink.by.newsItemId.personId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where link.item_id=? and link.person_id=?
+
+select.NewsLink.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where link.id=? 
+
+select.current.NewsLinks.by.sakaiUserId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and link.hidden=0 order by ni.news_time asc
+
+select.current.NewsLinks.by.sakaiUserId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and site.context_id=? and link.hidden=0 order by ni.news_time asc
+
+select.starred.NewsLinks.by.sakaiUserId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and link.sticky=1 order by ni.news_time asc
+
+select.starred.NewsLinks.by.sakaiUserId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and site.context_id=? and link.sticky=1 order by ni.news_time asc
+
+select.hidden.NewsLinks.by.sakaiUserId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and link.hidden=1 order by ni.news_time asc
+
+select.hidden.NewsLinks.by.sakaiUserId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
+st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and site.context_id=? and link.hidden=1 order by ni.news_time asc
 
 select.Person.by.id = select id as p_id, sakai_id as p_sakai_id, user_id as p_user_id from dash_person where id=?
 
