--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -552,9 +552,9 @@ update.NewsItem.newsTime = update dash_news_item set news_time=? where id=?
 
 update.NewsItem.newsTimeLabelKey = update dash_news_item set news_time_label_key=? where id=?
 
-update.NewsItem.subtype = update dash_news_item set subtype=? where id=?
+update.NewsItem.subtype = update dash_news_item set subtype=?,news_time=?,news_time_label_key=? where id=?
 
-update.NewsItem.title = update dash_news_item set title=? where id=?
+update.NewsItem.title = update dash_news_item set title=?,news_time=?,news_time_label_key=? where id=?
 
 update.NewsLink = update dash_news_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
 
