--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -116,4 +116,5 @@ dash.ajax.show.success = Item is no longer hidden
 dash.ajax.star.success = Item is now starred
 dash.ajax.unstar.success = Item is no longer starred
 
+updated = - updated
 
