--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -4,8 +4,8 @@ create.AvailabilityCheck.table = create table dash_availability_check \
 ( id number not null primary key, entity_ref varchar2(265) not null, \
 entity_type_id varchar2(255) not null, scheduled_time timestamp(0) not null); \
 create sequence dash_availability_check_seq start with 1 increment by 1 nomaxvalue; \
-create unique index dash_availability_check_idx on dash_availability_check(entity_ref, scheduled_time); \
-create index dash_availability_check_time_idx on dash_availability_check(scheduled_time)
+create unique index dash_avail_check_idx on dash_availability_check(entity_ref, scheduled_time); \
+create index dash_avail_check_time_idx on dash_availability_check(scheduled_time)
 
 create.CalendarItem.table = create table dash_calendar_item \
 ( id number not null primary key, calendar_time timestamp(0) not null, calendar_time_label_key varchar2(40), \
@@ -13,9 +13,9 @@ title varchar2(255) not null, \
 entity_ref varchar2(265) not null, entity_type number not null, subtype varchar2(40), context_id number not null, \
 repeating_event_id number, sequence_num integer ); \
 create sequence dash_calendar_item_seq start with 1 increment by 1 nomaxvalue; \
-create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
-create unique index dash_calendar_entity_label_idx on dash_calendar_item (entity_ref, calendar_time_label_key, sequence_num); \
-create index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
+create index dash_cal_time_idx on dash_calendar_item (calendar_time); \
+create unique index dash_cal_entity_label_idx on dash_calendar_item (entity_ref, calendar_time_label_key, sequence_num); \
+create index dash_cal_entity_idx on dash_calendar_item (entity_ref)
 
 create.CalendarLink.table = create table dash_calendar_link \
 ( id number not null primary key, person_id number not null, context_id number not null, \
@@ -25,16 +25,17 @@ create sequence dash_calendar_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
 
 create.Config.table = create table dash_config ( id number not null primary key, \
-property_name varchar2(99) not null, property_value number(10,0) not null ); \ 
+property_name varchar2(99) not null, property_value number(10,0) not null ); \
+create sequence dash_config_seq start with 1 increment by 1 nomaxvalue; \ 
 create unique index dash_config_name_idx on dash_config(property_name); \
-insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_PANEL', 5); \
-insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_DISCLOSURE', 20); \
-insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_GROUP', 2); \
-insert into dash_config (property_name, property_value) values ('PROP_REMOVE_ITEMS_AFTER_WEEKS', 52); \
-insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26); \
-insert into dash_config (property_name, property_value) values ('PROP_DAYS_BETWEEN_HORIZ0N_UPDATES', 1); \
-insert into dash_config (property_name, property_value) values ('PROP_WEEKS_TO_HORIZON', 4); \
-insert into dash_config (property_name, property_value) values ('PROP_MOTD_MODE', 1) 
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_DEFAULT_ITEMS_IN_PANEL', 5); \
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_DEFAULT_ITEMS_IN_DISCLOSURE', 20); \
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_DEFAULT_ITEMS_IN_GROUP', 2); \
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_REMOVE_ITEMS_AFTER_WEEKS', 52); \
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26); \
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_DAYS_BETWEEN_HORIZ0N_UPDATES', 1); \
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_WEEKS_TO_HORIZON', 4); \
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_MOTD_MODE', 1) 
 
 create.Context.table = create table dash_context \
 ( id number not null primary key, context_id varchar2(255) not null, \
@@ -76,12 +77,13 @@ create unique index dash_person_contxt_st_idx on dash_person_context_type (item_
 create.PersonSourceType.table = create table dash_person_sourcetype (id number not null primary key, \
 item_type number(10,0) not null, person_id number not null, sourcetype_id number not null); \
 create sequence dash_person_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
-create unique index dash_person_sourcetype_idx on dash_person_sourcetype (item_type, person_id, context_id, sourcetype_id);
+create unique index dash_person_sourcetype_idx on dash_person_sourcetype (item_type, person_id, sourcetype_id);
 
 create.RepeatingEvent.table = create table dash_repeating_event (id number not null primary key, \
 first_time timestamp(0) not null, last_time timestamp(0), frequency varchar2(40) not null, max_count integer, \
 calendar_time_label_key varchar2(40), title varchar2(255) not null, \
-entity_ref varchar2(265) not null, subtype varchar2(40), entity_type numbert not null, context_id number not null ); \
+entity_ref varchar2(265) not null, subtype varchar2(40), entity_type number not null, context_id number not null ); \
+create sequence dash_repeating_event_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_repeating_event_first_idx on dash_repeating_event (first_time); \
 create index dash_repeating_event_last_idx on dash_repeating_event (last_time)
 
@@ -130,7 +132,7 @@ context_id, repeating_event_id, sequence_num) values (dash_calendar_item_seq.nex
 insert.CalendarLink = insert into dash_calendar_link (id, person_id, item_id, context_id, hidden, sticky) \
 values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
 
-insert.Config = insert into dash_config (property_name, property_value) values (?, ?)
+insert.Config = insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, ?, ?)
 
 insert.Context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?)
 
@@ -148,8 +150,8 @@ insert.PersonContextSourceType = insert into dash_person_context_type (id, item_
 
 insert.PersonSourceType = insert into dash_person_sourcetype (id, item_type, person_id, sourcetype_id) values (dash_person_sourcetype_seq.nextval, ?, ?, ?)
 
-insert.RepeatingEvent = insert into dash_repeating_event (first_time, last_time, frequency, max_count, \
-calendar_time_label_key, title, entity_ref, subtype, entity_type, context_id) values (?, ?, ?, ?, ?, ?, ?, ?, ?, ?) 
+insert.RepeatingEvent = insert into dash_repeating_event (id, first_time, last_time, frequency, max_count, \
+calendar_time_label_key, title, entity_ref, subtype, entity_type, context_id) values (dash_repeating_event_seq.nextval, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?) 
 
 insert.SourceType = insert into dash_sourcetype ( id, identifier, access_permission) values (dash_sourcetype_seq.nextval, ?, ?)
 
